2009.11.06

* Reverted trunk to pre-version-work point.
* Cherry-picked the change that added missing deferred returns in two tests.

2009.10.20

* Added clean.sh admin script.
* Cleaned up TODO file.
* Updated meta file with more data and incremented the version to 0.3.
* Added utils subpackage.
* Updated setup.py to use the new utils subpackage.
* Added docs.
* Updated README.
* Cleaned up lots of unused imports.
* Formatting tweaks.
* Added a call to strip for the help-string-returning methods.
* Added a maxLength attribute to QueryFactory for custom settings by users.
* Updated proxy to instantiate QueryFactory with an optional maxLength
override.
* Updated history file.
* Cleaned up examples.
* Added an admin script for testing examples.
* Updated the commit script to run the exmaple tests.
* Added missing error handling in commit script.
* Added PYTHONPATH to example runner commands.
* Removed PYTHONPATH from admin/defs.sh.
* Removed debugging echo statement from commit.sh.
* Removed manual PYTHONPATH setting in example runner.
* Formatting tweaks.
* Updated TODO and README.
* Added admin upload script.

2008.11.10

* Added a test for None/null.
* Added a serializer for Python datetime -> JSON.
* Updated the version.
* Updated the commitAndPush script to pass the skip_tests parameter (and fixed
its filename extention).
* Added missing sudo to cleanup function.
* Removed unused clean script (and made sure that the other scripts use the
clean function).
* Converted checkBuild to function and removed script.
* Made the error function take a message parameter.
* Updated the bzr push command for svn.
* Fixed failing test for new "none" check.
* Removed sudo calls from admin scripts.
* Updated the ChangeLog with missing notes from earlier today.
* Moved version info into meta package file.

2008.07.18

* Added more admin scripts.

2008.07.16

* Applied a patch from Moshe Zadka: "When getting a long reply, the client